Thu Sep 28 13:35:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-hpux-11.00.h:
          Removed ACE_HAS_EXPLICIT_STATIC_TEMPLATE_MEMBER_INSTANTIATION that
          was set for gcc, with this define set the ACE library doesn't
          build.

        * ace/CDR_Stream.cpp:
          Initialise pointer with 0

        * ace/TP_Reactor.{h,inl}:
          Changed owner from int to bool.

Wed Sep 27 21:18:04 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Synch_Options.h: Corrected the table of possible Use_Reactor,
          Timeout combinations - it was reversed.

        * ace/WFMO_Reactor.{h cpp}: Change the delete_signal_handler_,
          delete_timer_queue_, delete_handler_rep_, delete_notify_handler_,
          and open_for_business_ members from int to bool to more
          accurately reflect their nature as yes/no indicators.
          Also, initialize notify_handler_ to 0 in constructors to avoid
          a UMR warning from Purify.

Wed Sep 27 06:28:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_static_compile.pl:
          Added protocols directory

Tue Sep 26 09:49:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/dynamicany.mpb:
          Derive from valuetype, needed to get AbstractBase::_nil() in a no
          inline build.

Mon Sep 25 16:29:42 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/ACE.cpp (send_n_i): Conditionally removed the check for
          errno == ENOBUFS because Winsock send, or WSASend will try to
          enqueue all buffer at once (to the kernel) and if not it will
          return ENOBUFS, in which case the socket is always ready for
          writing but actually winsock can never perform such write and we
          have endless loop.  Thanks to Aleksandar Vukajlovic <vukajlo at
          finsoft dot co dot yu> for reporting this and suggesting a fix.
